# FeederLocator

./: .gitignore  CMakeLists.txt  README.md
Camera/: CCamera.cpp  CCamera.h  CCameraSimu.cpp  CMakeLists.txt
Camera/include/: CCamera.h  cameradef.h
Camera/src/: CCamera.cpp  CCameraSimu.cpp
GUI/: CMainWindow.cpp  CMainWindow.h  CMakeLists.txt  CPaintWidget.cpp  CPaintWidget.h  CThread.cpp  CThread.h  main.cpp
GUI/src/: CMainWindow.cpp  CMainWindow.h  CPaintWidget.cpp  CPaintWidget.h  CSettingDlg.cpp  CSettingDlg.h  CStepDlg.cpp  CStepDlg.h  CThread.cpp  CThread.h  GUI.qrc  main.cpp
imgProc/: CMakeLists.txt
imgProc/include/: imgProc.h  imgprocdef.h
imgProc/src/: baseLocate.cpp  chipLocate.cpp  imgProc.cpp
misc/: CMakeLists.txt
misc/include/: CDataSet.h  CSuperTerminal.h  imgProc.h  logging.h  miscdef.h
misc/src/: CDataSet.cpp  CSuperTerminal.cpp  baseLocate.cpp  chipLocate.cpp  imgProc.cpp
python/: CMakeLists.txt
python/FeederLocator/: __init__.py  _imgProc.cpp
python/cmake/: Dependencies.cmake
